[metadata]
name = createcpp
version = 0.0.1
author = Mohamed Emara
author_email = mae.emara@gmail.com
description = Quickly create a C++ project
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/eigemx/create-cpp
project_urls =
    Bug Tracker = https://github.com/eigemx/create-cpp/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
keywords =
    C++
    CMake
    clang-tidy
    clang-format
    python

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    create-cpp = createcpp._cli:main